Initial third-party heap support
This is a squashed commit of changes Angus Atkinson made to enable
support for third-party heap.

Initial attempt at NoGC

Replace allocation calls with MMTk callouts

Fix errors/warnings

Bugfixes to allow miniruby to compile

Fix typo which results in under-allocated slots

Barely working version of miniruby

-   At least it can run Hello World now! ...but not much more

Hacky change so that arrays copy when resizing

Fix bug with flushing of IO

-   IO didn't flush when outputting to something other than a tty.
-   Refactor finalisation logic to guarantee flush on exit.

Ensure that more Files/IO are finalised properly

Fix MMTk linking when building full Ruby

Fix autodetection of compiler flags

-   Ruby script was compiling code, but generating errors because it wasn't
-   linking MMTk properly. I have edited the autoconf script to ensure that
-   the correct option is passed down to `rbconfig.rb`
-
-   (this feels a bit hacky though)

Add test exclusions for third party GCs

Adjust test inclusions, add heap size config param

Update readme to add info about MMTk

Allow heap size to be configurable at runtime

-   Uses environment variable rather than compiler flag.

Add more excluded tests

Fix gem installation for C extensions

-   Ruby will now automagically copy the libmmtk_ruby.(so|a) files to the
    build location, so that C extensions can link against it if necessary.

Fix failing JIT, Coverage tests (unsupported)

--- a/template/Makefile.in
+++ b/template/Makefile.in
@@ -107,7 +107,7 @@ MJIT_TABS=@MJIT_TABS@
 LDFLAGS = @STATIC@ $(CFLAGS) @LDFLAGS@
 EXTLDFLAGS = @EXTLDFLAGS@
 XLDFLAGS = @XLDFLAGS@ $(EXTLDFLAGS)
-EXTLIBS =
+EXTLIBS = @EXTLIBS@
 LIBS = @LIBS@ $(EXTLIBS)
 MISSING = @LIBOBJS@ @ALLOCA@
 ENABLE_SHARED = @ENABLE_SHARED@
